--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-
+######################
+## JetBrains gitignore
+######################
+.idea/*
 ###################
 ## Unity gitignore
 ###################
